2008-10-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/ximage/gstximagesrc.c: (gst_ximage_src_stop):
	Fix build for systems that don't have XDamage.

2008-10-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/rtp/client-H263p.sdp:
	* tests/examples/rtp/client-H263p.sh:
	* tests/examples/rtp/server-VTS-H263p.sh:
	Add some more H263p server and client examples.

2008-10-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac::
	  Depend on released versions of core and base.

2008-10-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/pulse/pulsesink.c: (gst_pulsesink_write):
	* ext/pulse/pulsesrc.c: (gst_pulsesrc_read):
	Return -1 instead of 0 in error cases. Fixes #554771.

2008-10-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	* sys/ximage/gstximagesrc.c: (gst_ximage_src_start),
	(gst_ximage_src_stop), (gst_ximage_src_ximage_get):
	Stop leaking the cursor image.
	Unref the last_ximage and the cached cursor image on shutdown.
	Fixes #551570.

2008-10-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	* sys/v4l2/gstv4l2object.h:
	Getting the Class from an instance is not just a matter of casting it to
	the class struct but it involves calling G_OBJECT_GET_CLASS on the
	instance. Fixes #549784.

2008-10-01  Michael Smith <msmith@songbirdnest.com>

	* configure.ac:
	  Fix libs for linking directsound.
	* sys/directsound/gstdirectsoundsink.c:
	  Fix buffer sizing to prevent racing the ringbuffer at startup.
	  Add volume property.

2008-09-27  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/pulse/pulsesink.c:
	Fix problems with pulsesink randomly erroring with code 'OK' after a
	format change on the stream by waiting when disconnecting the stream.

2008-09-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpamrdepay.c: (gst_rtp_amr_depay_class_init),
	(gst_rtp_amr_depay_process):
	Mark DISCONT on output buffers when the marker bit signals a new talk
	spurt.
